# snakian

./: .gitmodules  Cargo.toml  README.md  build.rs  readme.md
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: hardware_interrupts.rs  interrupts.rs  main.rs
snakian_kernel/: Cargo.toml  build.rs
snakian_kernel/src/: chars.rs  gdt.rs  hardware_interrupts.rs  interrupts.rs  keyboard_driver.rs  lib.rs  log.rs  main.rs  memory.rs  panic.rs  serial.rs  testing.rs  vga_driver.rs
snakian_kernel/src/display/: buffer.rs  char_writer.rs  chars.rs  color_code.rs  mod.rs  screen_char.rs  terminal.rs  vector.rs  vga_driver.rs
snakian_kernel/src/memory/: mod.rs
snakian_kernel/tests/: core_tests.rs
src/: gdt.rs  hardware_interrupts.rs  interrupts.rs  keyboard_driver.rs  lib.rs  main.rs  serial.rs  test_util.rs  vga_driver.rs
