[package]
name = "snakian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["snakian_kernel"]

[build-dependencies]
bootloader = "0.11.4"
snakian_kernel = { path = "snakian_kernel", artifact = "bin", target = "x86_64-unknown-none"}

[dependencies]
