[package]
name = "snakian_kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snakian_kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.7"
conquer-once = { version = "0.4.0", default-features = false }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
pc-keyboard = "0.7.0"
pic8259 = "0.10.4"
spin = "0.9.8"
uart_16550 = "0.3.0"
volatile = "0.2.6"
x86_64 = "0.14.12"


